--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -5,17 +5,36 @@ Duzhi Zhao
 
 ## Problem 1
 
+# Section 1.1
+
 ``` r
 # Import data set "instacart"
-instacart_data = instacart %>% 
-  janitor::clean_names() 
+library(p8105.datasets)
+data("instacart")
 
-
-range(pull(instacart_data, aisle_id))
+instacart_data_q1 = instacart %>% 
+  janitor::clean_names() %>%
+  count(aisle) %>% #count the number of items in each group of aisle
+  arrange(desc(n))  #sort in descending order
 ```
-
-    ## [1]   1 134
 
 Comments:
 
-There are 134 aisles.
+There are 134 aisles in total and the aisle “fresh vegetables” has the
+most items ordered from.
+
+# Section 1.2
+
+``` r
+items_order_df = instacart %>% 
+  janitor::clean_names() %>% 
+  count(aisle_id, aisle) %>% #count the number of items in each group of aisle
+  filter(n > 10000) %>% #filter items ordered > 10000
+  arrange(desc(n)) %>% #sort items ordered in descending order 
+  rename(count = n)
+  
+ggplot(items_order_df) +
+  geom_col(aes(x = aisle_id, y = count, fill = aisle), position = "dodge") 
+```
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
