--- a/hw3_dz2426.Rmd
+++ b/hw3_dz2426.Rmd
@@ -17,7 +17,7 @@ library(viridis)
 
 ## Problem 1
 # Section 1.1
-```{r}
+```{r echo = FALSE}
 # Import data set "instacart"
 library(p8105.datasets)
 data("instacart")
@@ -26,21 +26,21 @@ instacart_data_q1 = instacart %>%
   janitor::clean_names() %>%
   count(aisle) %>% #count the number of items in each group of aisle
   arrange(desc(n))  #sort in descending order
-  
+
 ```
 Comments:
 
 There are `r range(pull(instacart, aisle_id))[2]` aisles in total and the aisle "fresh vegetables" has the most items ordered from.
 
 # Section 1.2
-```{r}
+```{r echo = FALSE}
 items_order_df = instacart %>% 
   janitor::clean_names() %>% 
   count(aisle_id, aisle) %>% #count the number of items in each group of aisle
   filter(n > 10000) %>% #filter items ordered > 10000
   arrange(aisle_id) %>% #sort items ordered in descending order 
   rename(count = n)
-  
+
 ggplot(items_order_df) +
   geom_col(aes(x = aisle_id, y = count, fill = aisle), position = "dodge") +
   labs(
@@ -52,9 +52,42 @@ ggplot(items_order_df) +
   viridis::scale_color_viridis(
     name = "aisle", 
     discrete = TRUE
-    ) +
+  ) +
   theme(legend.position = "bottom")
 
+```
 
+# Section 1.3
+```{r echo = FALSE}
+pop_items_df = 
+  instacart %>% 
+  select(aisle_id, aisle, product_name) %>% #select the data we want
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% #filter out these three aisle groups
+  count(aisle, product_name) %>% #count the number of each product under each aisle 
+  group_by(aisle) %>% #order by group
+  top_n(n = 3) %>% #select the top 3 popular products
+  mutate(
+    rank = dense_rank(desc(n)) #rank each product by each group
+  ) %>% 
+  arrange(aisle, rank)
+
+pop_items_table = tibble(
+  aisle = c(pull(pop_items_df, aisle)),
+  product_name = c(pull(pop_items_df, product_name)),
+  rank = c(pull(pop_items_df, rank))
+) %>% 
+  pivot_wider(
+    names_from = rank,
+    values_from = product_name,
+  ) %>% 
+  rename("rank #1" = 2, 
+         "rank #2" = 3, 
+         "rank #3" = 4)
+  
+```
+
+Table 1: The three most popular products in each of the aisles
+```{r echo = FALSE}
+knitr::kable(pop_items_table)
 ```
 
