--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -7,17 +7,6 @@ Duzhi Zhao
 
 # Section 1.1
 
-``` r
-# Import data set "instacart"
-library(p8105.datasets)
-data("instacart")
-
-instacart_data_q1 = instacart %>% 
-  janitor::clean_names() %>%
-  count(aisle) %>% #count the number of items in each group of aisle
-  arrange(desc(n))  #sort in descending order
-```
-
 Comments:
 
 There are 134 aisles in total and the aisle “fresh vegetables” has the
@@ -25,16 +14,17 @@ most items ordered from.
 
 # Section 1.2
 
-``` r
-items_order_df = instacart %>% 
-  janitor::clean_names() %>% 
-  count(aisle_id, aisle) %>% #count the number of items in each group of aisle
-  filter(n > 10000) %>% #filter items ordered > 10000
-  arrange(desc(n)) %>% #sort items ordered in descending order 
-  rename(count = n)
-  
-ggplot(items_order_df) +
-  geom_col(aes(x = aisle_id, y = count, fill = aisle), position = "dodge") 
-```
+![](hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
 
-<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+# Section 1.3
+
+    ## Selecting by n
+
+Table 1: The three most popular products in each of the
+aisles
+
+| aisle                      | rank \#1                                      | rank \#2                            | rank \#3            |
+| :------------------------- | :-------------------------------------------- | :---------------------------------- | :------------------ |
+| baking ingredients         | Light Brown Sugar                             | Pure Baking Soda                    | Cane Sugar          |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats | Organix Chicken & Brown Rice Recipe | Small Dog Biscuits  |
+| packaged vegetables fruits | Organic Baby Spinach                          | Organic Raspberries                 | Organic Blueberries |
