--- a/hw3_dz2426.Rmd
+++ b/hw3_dz2426.Rmd
@@ -8,11 +8,24 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-
 library(tidyverse)
-library(ggridges)
 library(viridis)
+library(leaflet)
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+	message = FALSE,
+	fig.width = 8, 
+  fig.height = 6,
+  out.width = "90%"
+)
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
 ## Problem 1
@@ -36,25 +49,22 @@ There are `r range(pull(instacart, aisle_id))[2]` aisles in total and the aisle 
 ```{r echo = FALSE}
 items_order_df = instacart %>% 
   janitor::clean_names() %>% 
-  count(aisle_id, aisle) %>% #count the number of items in each group of aisle
+  count(aisle) %>% #count the number of items in each aisle
   filter(n > 10000) %>% #filter items ordered > 10000
-  arrange(aisle_id) %>% #sort items ordered in descending order 
   rename(count = n)
 
-ggplot(items_order_df) +
-  geom_col(aes(x = aisle_id, y = count, fill = aisle), position = "dodge") +
+items_order_plot = 
+  items_order_df %>% 
+  mutate(aisle = as.factor(aisle)) %>% #factor aisle into different levels
+  ggplot(aes(x = aisle, y = count)) +
+  geom_col() + #show bar graph
+  coord_flip() + #xy axis flip 
   labs(
-    title = "Number of items ordered in each aisle",
-    x = "aisle id",
-    y = "Number of items ordered",
-    caption = "Data from 'The Instacart Online Grocery Shopping Dataset 2017'"
-  ) + 
-  viridis::scale_color_viridis(
-    name = "aisle", 
-    discrete = TRUE
-  ) +
-  theme(legend.position = "bottom")
+    title = "Number of items ordered in each aisle (>10000)"
+  )
+  ylim(0, 175000)
 
+items_order_plot
 ```
 
 # Section 1.3
