--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -14,11 +14,13 @@ most items ordered from.
 
 # Section 1.2
 
-![](hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+    ## <ScaleContinuousPosition>
+    ##  Range:  
+    ##  Limits:    0 -- 1.75e+05
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
 
 # Section 1.3
-
-    ## Selecting by n
 
 Table 1: The three most popular products in each of the
 aisles
