--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -5,6 +5,22 @@ Duzhi Zhao
 
 ## Problem 1
 
+# Description of “Instacart” dataset
+
+Comments:
+
+write a short description of the dataset, noting the size and structure
+of the data, describing some key variables, and giving illstrative
+examples of observations
+
+This limited “Instacart” dataset contains 1,384,617 observations of
+131,209 unique users, and 15 columns of variables. Here are some key
+variables, such as “aisle” which includes 134 aisles, “department” which
+includes 21 departments, “product\_name” which includes 39123 different
+products, “reordered” showing whether the item has been ordered by this
+user in the past, and “order\_dow” indicating the day of the week on
+which the order is placed.
+
 # Section 1.1
 
 Comments:
@@ -18,7 +34,7 @@ most items ordered from.
     ##  Range:  
     ##  Limits:    0 -- 1.75e+05
 
-<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
 # Section 1.3
 
@@ -43,6 +59,8 @@ aisles
 | packaged vegetables fruits | Organic Raspberries                           |           5546 |    2 |
 | packaged vegetables fruits | Organic Blueberries                           |           4966 |    3 |
 
+# Section 1.4
+
 Table 2: mean hour of the day at which Pink Lady Apples and Coffee Ice
 Cream are ordered on each day of the
 week
@@ -56,3 +74,5 @@ week
 | Fri        |                            12 |                            15 |
 | Sat        |                            13 |                            12 |
 | Sun        |                            12 |                            14 |
+
+## Problem 2
