--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -26,15 +26,12 @@ which the order is placed.
 Comments:
 
 There are 134 aisles in total and the aisle “fresh vegetables” has the
-most items ordered from.
+most items ordered
+from.
 
 # Section 1.2
 
-    ## <ScaleContinuousPosition>
-    ##  Range:  
-    ##  Limits:    0 -- 1.75e+05
-
-<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-3-1.png" width="100%" />
 
 # Section 1.3
 
@@ -76,3 +73,16 @@ week
 | Sun        |                            12 |                            14 |
 
 ## Problem 2
+
+# Section 2.1
+
+Comments:
+
+In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
+2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
+observed at 7 or more
+locations.
+
+# Section 2.2
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-11-1.png" width="100%" />
