--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -14,12 +14,15 @@ of the data, describing some key variables, and giving illstrative
 examples of observations
 
 This limited “Instacart” dataset contains 1,384,617 observations of
-131,209 unique users, and 15 columns of variables. Here are some key
-variables, such as “aisle” which includes 134 aisles, “department” which
-includes 21 departments, “product\_name” which includes 39123 different
-products, “reordered” showing whether the item has been ordered by this
-user in the past, and “order\_dow” indicating the day of the week on
-which the order is placed.
+131,209 unique users, and 15 columns of variables. Some key variables
+are “aisle” “department”, “product\_name”, “reordered” showing whether
+the item has been ordered by this user in the past, and “order\_dow”
+indicating the day of the week on which the order is placed.
+
+“Aisle” has 134 groups, such as yogurt, fresh vegetables, and fresh
+fruits. “Product\_name” includes 39123 products, such as Bulgarian
+Yogurt, Organic Celery Hearts, and Bag of Organic Bananas. “Department”
+includes 21 departments, such as dairy eggs, produce, canned goods.
 
 # Section 1.1
 
@@ -38,23 +41,17 @@ from.
 Table 1: The three most popular products in each of the
 aisles
 
-| aisle                      | rank \#1                                      | rank \#2                            | rank \#3            |
-| :------------------------- | :-------------------------------------------- | :---------------------------------- | :------------------ |
-| baking ingredients         | Light Brown Sugar                             | Pure Baking Soda                    | Cane Sugar          |
-| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats | Organix Chicken & Brown Rice Recipe | Small Dog Biscuits  |
-| packaged vegetables fruits | Organic Baby Spinach                          | Organic Raspberries                 | Organic Blueberries |
-
-| aisle                      | product\_name                                 | ordered\_times | rank |
-| :------------------------- | :-------------------------------------------- | -------------: | ---: |
-| baking ingredients         | Light Brown Sugar                             |            499 |    1 |
-| baking ingredients         | Pure Baking Soda                              |            387 |    2 |
-| baking ingredients         | Cane Sugar                                    |            336 |    3 |
-| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |             30 |    1 |
-| dog food care              | Organix Chicken & Brown Rice Recipe           |             28 |    2 |
-| dog food care              | Small Dog Biscuits                            |             26 |    3 |
-| packaged vegetables fruits | Organic Baby Spinach                          |           9784 |    1 |
-| packaged vegetables fruits | Organic Raspberries                           |           5546 |    2 |
-| packaged vegetables fruits | Organic Blueberries                           |           4966 |    3 |
+| aisle                      | product\_name                                 | ordered\_times |
+| :------------------------- | :-------------------------------------------- | -------------: |
+| baking ingredients         | Light Brown Sugar                             |            499 |
+| baking ingredients         | Pure Baking Soda                              |            387 |
+| baking ingredients         | Cane Sugar                                    |            336 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |             30 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |             28 |
+| dog food care              | Small Dog Biscuits                            |             26 |
+| packaged vegetables fruits | Organic Baby Spinach                          |           9784 |
+| packaged vegetables fruits | Organic Raspberries                           |           5546 |
+| packaged vegetables fruits | Organic Blueberries                           |           4966 |
 
 # Section 1.4
 
@@ -80,9 +77,19 @@ Comments:
 
 In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
 2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
-observed at 7 or more
-locations.
+observed at 7 or more locations.
 
 # Section 2.2
 
+``` r
+excellent_resp %>% 
+  ggplot(aes(x = year, y = mean_data_val, color = state)) +
+  geom_line() +
+  xlab("Year") +
+  ylab("Average value") +
+  ggtitle("Figure 1a: Average value within each state from 2002 to 2010")
+```
+
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-11-1.png" width="100%" />
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-12-1.png" width="100%" />
