--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -77,18 +77,10 @@ Comments:
 
 In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
 2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
-observed at 7 or more locations.
+observed at 7 or more
+locations.
 
 # Section 2.2
-
-``` r
-excellent_resp %>% 
-  ggplot(aes(x = year, y = mean_data_val, color = state)) +
-  geom_line() +
-  xlab("Year") +
-  ylab("Average value") +
-  ggtitle("Figure 1a: Average value within each state from 2002 to 2010")
-```
 
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-11-1.png" width="100%" />
 
