--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -85,3 +85,12 @@ locations.
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-11-1.png" width="100%" />
 
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-12-1.png" width="100%" />
+
+# Section 2.3
+
+Make a two-panel plot showing, for the years 2006, and 2010,
+distribution of data\_value for responses (“Poor” to “Excellent”) among
+locations in NY
+State.
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-13-1.png" width="100%" />
