--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -9,20 +9,18 @@ Duzhi Zhao
 
 Comments:
 
-write a short description of the dataset, noting the size and structure
-of the data, describing some key variables, and giving illstrative
-examples of observations
-
 This limited “Instacart” dataset contains 1,384,617 observations of
 131,209 unique users, and 15 columns of variables. Some key variables
-are “aisle” “department”, “product\_name”, “reordered” showing whether
-the item has been ordered by this user in the past, and “order\_dow”
-indicating the day of the week on which the order is placed.
+are “aisle” “department”, “product\_name”, “reordered”, and
+“order\_dow”.
 
-“Aisle” has 134 groups, such as yogurt, fresh vegetables, and fresh
-fruits. “Product\_name” includes 39123 products, such as Bulgarian
-Yogurt, Organic Celery Hearts, and Bag of Organic Bananas. “Department”
+“aisle” contains 134 groups, such as yogurt, fresh vegetables, and fresh
+fruits. “product\_name” includes 39123 products, such as Bulgarian
+Yogurt, Organic Celery Hearts, and Bag of Organic Bananas. “department”
 includes 21 departments, such as dairy eggs, produce, canned goods.
+“reordered” shows whether the item has been ordered by this user in
+the past. “order\_dow” indicates the day of the week on which the order
+is placed
 
 # Section 1.1
 
@@ -88,9 +86,40 @@ locations.
 
 # Section 2.3
 
-Make a two-panel plot showing, for the years 2006, and 2010,
-distribution of data\_value for responses (“Poor” to “Excellent”) among
-locations in NY
-State.
-
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-13-1.png" width="100%" />
+
+## Problem 3
+
+# Section 3.1
+
+Comments:
+
+The tidied “accel\_data” dataset contains 35 observations and 1444
+variables. Variable “week” includes number 1-5, indicating the number of
+weeks this experiment was at. Variable “day” refers to the day the
+accelerometer was monitoring on. Variable “if\_weekday” determines if
+the day is a weekday or weeekend. The rest of the “activity” columns
+represent the activity counts for each minute of a 24-hour day starting
+at midnight. A total of 1440 minutes of activity data was included.
+
+Traditional analyses of accelerometer data focus on the total activity
+over the day. Using your tidied dataset, aggregate accross minutes to
+create a total activity variable for each day, and create a table
+showing these totals. Are any trends apparent?
+
+# Section 3.2
+
+Comments:
+
+Table 3: Total activity in minutes for each day over 5
+weeks
+
+| week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
+| ---: | -----: | ------: | --------: | -------: | -----: | -------: | -----: |
+|    1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
+|    2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
+|    3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
+|    4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
+|    5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
+
+# Section 3.3
